# Chip8-emulator

./: .gitignore  CMakeLists.txt  Readme.md
include/chip8_emulator/: Chip8.h  Chip8Gui.h  Window.hpp  os_features.h  rom_handler.h  rom_main_loop.h  utils.h
lib/SDL2/docs/: README-ios.md  README-winrt.md
src/: Chip8.cpp  Chip8Gui.cpp  Window.cpp  main.cpp  os_features.cpp  rom_handler.cpp  rom_main_loop.cpp  stdafx.h
src/chip8_emulator/: Chip8.cpp  Chip8.h  Chip8Gui.cpp  Chip8Gui.h
